tests/samples/valid/five.pn
fn main() -> i32
{
	return: 5
}
