tests/samples/invalid/return_type_mismatch.pn

fn main() -> bool
{
	return:
	50
}
